Sample_App/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: example-deployment

---
 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deployment
  namespace: example-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: example-container
        image: nginx:latest  # Replace this with your desired image
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-deployment
spec:
  selector:
    app: example-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
