Sample_App/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: example-deployment
spec:
  ingressClassName: nginx
  rules:
  - host: dev.ejemplix.com # Replace with your desired hostname
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: example-service
            port:
              number: 80
